@@ -20,6 +20,8 @@ shutter (0.80~ppa1) jaunty; urgency=low
        [do not capture the zoom window when using the simple selection]
     -- LP: #363708
        [lines of selected area get captured sometimes]
+    -- LP: #364165
+       [dialogs should set the window title]
     -- LP: #365365
        [polaroid plugin text doesn't allow apostrophes]
     -- LP: #366695
